--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     
 </head>
 <body>
+    <!-- nav bar -->
+    <div class="navbar">
+        <div class="logo"><img src="./logo icon.svg" alt="logo_image"></div>
+        <div class="navbarlist">
+            <ul>
+                <li><a href="#">Enterprise Services</a></li>
+                <li><a href="#">Private Equity Services</a></li>
+                <li><a href="#">Start-Up Services</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+    </div>
     
     <!-- link as js file -->
     <script src="./script.js"></script>
