--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First_Project</title>
-    <link rel="stylesheet" href="./style.css">
-    
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <!-- nav bar -->
     <div class="navbar">
-        <div class="logo"><img src="./logo icon.svg" alt="logo_image"></div>
-        <div class="navbarlist">
-            <ul>
-                <li><a href="#">Enterprise Services</a></li>
-                <li><a href="#">Private Equity Services</a></li>
-                <li><a href="#">Start-Up Services</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </div>
+      <div class="logo"><img src="./logo icon.svg" alt="logo_image" /></div>
+      <div class="navbarlist">
+        <ul>
+          <li><a href="#">Enterprise Services</a></li>
+          <li><a href="#">Private Equity Services</a></li>
+          <li><a href="#">Start-Up Services</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div> 
     </div>
-    
+    <div class="flex-container">
+      <div class="text">
+        A Tech-Focused Consulting Firm Delivering Tailored Solutions to
+        streamline workflows and Automate Processes
+      </div>
+      <div class="photo"><img src="./homeimage.png" alt="photo" srcset=""></div>
+    </div>
+
     <!-- link as js file -->
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
