Too add new work

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>First_Project</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
+
   <body>
     <!-- nav bar -->
     <div class="navbar">
@@ -18,13 +19,48 @@
           <li><a href="#">Contact Us</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
-      </div> 
+      </div>
     </div>
+    <!-- Home page -->
     <div class="flex-container">
       <div class="text">
         A Tech-Focused Consulting Firm Delivering Tailored Solutions to
         streamline workflows and Automate Processes
       </div>
+    </div>
+    <!-- Next page -->
+    <div class="container">
+      <div class="text1">
+        <h1>Private Equity</h1>
+        <p>
+          Akila Advisory is leveraging technology to navigate the due-diligence
+          process faster
+        </p>
+        <button>Read more</button>
+      </div>
+
+      <div class="photo">
+        <img src="./vector.jpg" alt="vector_image" srcset="" />
+      </div>
+    </div>
+    <!-- Next page -->
+    <div class="second">
+        <div class="image"><img src="./image 3.png" alt="work_picture" srcset=""></div>
+      <div class="text2">
+        <h1>Start-Ups</h1>
+        <ul>
+          <li>
+            We’re building and launching Saas companies quicker than ever
+            before.
+          </li>
+          <li>
+            Understand how we’re using infrastructure as code to get you off the
+            ground in record time
+          </li>
+        </ul>
+        <button>Read more</button>
+      </div>
+     
     </div>
 
     <!-- link as js file -->
