Too add new text

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -50,17 +51,57 @@
         <h1>Start-Ups</h1>
         <ul>
           <li>
-            We’re building and launching Saas companies quicker than ever
+            We're building and launching Saas companies quicker than ever
             before.
           </li>
           <li>
-            Understand how we’re using infrastructure as code to get you off the
+            Understand how we're using infrastructure as code to get you off the
             ground in record time
           </li>
         </ul>
         <button>Read more</button>
       </div>
      
+    </div>
+    <!-- next page -->
+    <div class="div2">
+      <div class="class1">
+        <h2>Enterprise</h2>
+        <p>We’re helping companies adopt best practices and apply tech-based solutions, increasing efficiency and driving KPIs</p>
+        <button>Read more</button>
+      </div>
+      <div class="class2">
+        <img src="./image 3 (1).png" alt="Enterprise_image" srcset="">
+      </div>
+    </div>
+    <!-- Next page -->
+    <div class="div3">
+      <div class="class3">
+        <img src="./image 2.png" alt="Contact US_imge" srcset="">
+      </div>
+      <div class="class4">
+        <h2>Get in touch</h2>
+        <p>Let us know how we can help!</p>
+        <button>Contact US</button>
+      </div>
+    </div>
+
+    <!-- footer -->
+    <div class="footer">
+    <div class="footer1">
+      <img src="./footer icon.svg" alt="Footer icon" srcset="">
+      <p>Amet praesentium incidunt eum adipisci ullam? Quo voluptatibus repellendus veniam pariatur nisi. Labore corrupti sunt sint cupiditate officiis? Provident commodi similique sunt eos fugiat saepe.</p>
+    </div>
+    <div class="footer2">
+      <h3><a href="#">Quick Links</a></h3>
+      <ul>
+        <li><a href="#">Private Equity Services</a></li>
+        <li><a href="#">Enterprise Services</a></li>
+        <li><a href="#">Start-Up Services</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">About Us</a></li>
+      </ul>
+    </div>
     </div>
 
     <!-- link as js file -->
