--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="class4">
         <h2>Get in touch</h2>
         <p>Let us know how we can help!</p>
-        <button>Contact US</button>
+        <button style="background-color: #040363; color: white;padding: 5px;border-radius: 4px;">Contact US</button>
       </div>
     </div>
 
@@ -93,13 +93,13 @@
       <p>Amet praesentium incidunt eum adipisci ullam? Quo voluptatibus repellendus veniam pariatur nisi. Labore corrupti sunt sint cupiditate officiis? Provident commodi similique sunt eos fugiat saepe.</p>
     </div>
     <div class="footer2">
-      <h3><a href="#">Quick Links</a></h3>
+      <h3><a href="#" style="color: white;">Quick Links</a></h3>
       <ul>
-        <li><a href="#">Private Equity Services</a></li>
-        <li><a href="#">Enterprise Services</a></li>
-        <li><a href="#">Start-Up Services</a></li>
-        <li><a href="#">Contact Us</a></li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="#" style="color: white;">Private Equity Services</a></li>
+        <li><a href="#" style="color: white;">Enterprise Services</a></li>
+        <li><a href="#" style="color: white;">Start-Up Services</a></li>
+        <li><a href="#" style="color: white;">Contact Us</a></li>
+        <li><a href="#" style="color: white;">About Us</a></li>
       </ul>
     </div>
     </div>
